# StreamPulse

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
consumer/: aggregator.py  cache.py  db.py  dlq_consumer.py  lag.py  main.py
dashboard/: index.html  package-lock.json  package.json  vite.config.js
dashboard/src/: App.css  App.jsx
db/: init.sql
ingest/: main.py  producer.py  schemas.py
metrics/: main.py
simulator/: generate.py
