[project]
name = "streampulse"
version = "0.1.0"
description = ""
authors = [
    {name = "Mohit"}
]
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.136.1,<0.137.0)",
    "kafka-python (>=2.3.1,<3.0.0)",
    "sqlalchemy (>=2.0.49,<3.0.0)",
    "psycopg2-binary (>=2.9.12,<3.0.0)",
    "redis (>=7.4.0,<8.0.0)",
    "structlog (>=25.5.0,<26.0.0)",
    "slowapi (>=0.1.9,<0.2.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "uvicorn (>=0.47.0,<0.48.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)",
    "httpx (>=0.28.1,<0.29.0)"
]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
